--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700|Sen:400,800&display=swap&subset=cyrillic" rel="stylesheet">
     <link rel="stylesheet" href="source/css/style.css">
     <script src="https://kit.fontawesome.com/e5b02e6571.js" crossorigin="anonymous"></script>
+
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.2.1/dist/jquery.min.js" type="text/javascript"></script>
+    <script src="https://cdn.jsdelivr.net/npm/jquery.maskedinput@1.4.1/src/jquery.maskedinput.js" type="text/javascript"></script>
     
     <title>Zeroing</title>
 </head>
@@ -175,7 +178,7 @@
             <div class="request__form">
                 <div class="request__item">
                     <div class="form__name">Имя</div>
-                    <input class="form__text" type="text">
+                    <input class="form__text-name" type="text">
                    <div class="form__placeholder">Николя</div>
                 </div> 
                  
@@ -204,6 +207,14 @@
         </div>
     </div>
 </section>
+
+
+
+<!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js">
+</script> подключаем jquery-->
+
+<script src="source/js/common.js"></script> <!--Правила для маски-->
+<!--<script src="assets/js/jquery.inputmask.js"></script>  готовый скрипт маски-->
 
 </body>
 </html>
